--- a/app/templates/Products/products.html
+++ b/app/templates/Products/products.html
@@ -8,6 +8,7 @@ productos
 {% block content %}
 
 <nav class="titulo"> <h1>administrador productos</h1></nav>
+<a href="{{ url_for('product.c_produ') }}" class="botton">Añadir</a>
   <table id="d-table">
     <thead>
         <tr>
@@ -36,11 +37,6 @@ productos
         </tr>
 
     </tbody>
-
-
-
-
-
   </table>  
 
 
