--- a/app/templates/users/login.html
+++ b/app/templates/users/login.html
@@ -14,7 +14,7 @@
             
                 <p class="size">Contraseña Usuario</p>
                 <input type="text" class="margin">
-                <a href="{{url_for('hello_world')}}">
+                <a href="{{url_for('user.adm_home')}}">
                     <input type="button" value="Iniciar sesion" class="botton">
                 </div>
             </a>
