--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -18,9 +18,14 @@
                     <input type="text" placeholder="¿Qué estas buscando?" class ="search">
                     <input type="button" value="Buscar" class="button-search">
                     </nav>
-                    <a href="{{url_for('cerrar')}}">Cerrar Sesion</a>
+                    <a href="{{url_for('home.cerrar')}}">Cerrar Sesion</a>
                 </nav>
             
        
 {% block content %}
 {% endblock %}
+<footer>
+    <p> Copyright @the Software house</p>
+</footer>
+</body>
+</html>
