--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -24,7 +24,9 @@
        
 {% block content %}
 {% endblock %}
-<footer>
+</div>
+</header>
+<footer class="footer">
     <p> Copyright @the Software house</p>
 </footer>
 </body>
