--- a/app/templates/reports/reports.html
+++ b/app/templates/reports/reports.html
@@ -8,6 +8,8 @@ productos
 {% block content %}
 
 <nav class="titulo"> <h1>Reportes de ventas </h1></nav>
+<nav class="a-table">
+  
   <table id="d-table">
     <thead>
         <tr>
@@ -19,7 +21,7 @@ productos
         </tr>
     </thead>
     <tbody>
-        <tr>
+      <tr>
             <td>##########</td>
             <td>##########</td>
             <td>##########</td>
@@ -31,7 +33,8 @@ productos
     </tbody>
   </table>  
 
-
+  
 </header>
+</nav>  
 
 {% endblock %}
