--- a/app/templates/home/menu_adm.html
+++ b/app/templates/home/menu_adm.html
@@ -13,12 +13,12 @@ categorias
                 <p>productos</p>
             </a>
 
-            <a href="#" class="options">
+            <a href="{{ url_for('personal.emp') }}" class="options">
                 <img src="" alt="imagen" >
                 <p>Personal</p>
             </a>
         
-            <a href="#" class="options">
+            <a href="{{ url_for('cat.catp')}}" class="options">
                 <img src="" alt="imagen" >
                 <p>Categoria</p>
             </a>
