--- a/app/templates/users/login.html
+++ b/app/templates/users/login.html
@@ -3,10 +3,14 @@
 {% endblock %}
 
 {% block content %}
+
 <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-<div class="fond">
+<div class="fond-c">
+    <h1 class>
+        Sistema de punto de venta 
+    </h1>
+
     <nav class="cont">
-        <nav class="mas">
             <h1> Inicio de sesión </h1>
             <div class="login">
                 <p class="size">Nombre Usuario</p>
@@ -15,10 +19,15 @@
                 <p class="size">Contraseña Usuario</p>
                 <input type="text" class="margin">
                 <a href="{{url_for('user.adm_home')}}">
-                    <input type="button" value="Iniciar sesion" class="botton">
-                </div>
-            </a>
-        </nav>
+                    <input type="button" value="Iniciar sesion" class="bpr bpr-ac">
+                </a>
+                <a href="{{url_for('venta.vender')}}">
+                    <input type="button" value="empleado" class="bpr bpr-ac">
+           </div> 
+           
+           
+                
+    
     </nav>
  </div> 
 
